--- a/gallery.html
+++ b/gallery.html
@@ -99,64 +99,100 @@
         </div>
 
         <!-- List Gallery/Gallery items-->
-        <!-- <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-                <div class="grid gap-4">
-                    <a data-fslightbox href="./assets/images/gallery-6.webp"><img
-                            class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-6.webp" alt="gallery"></a>
-                    <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg"><img
-                            class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="gallery"></a>
-                    <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg"><img
-                            class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg" alt="gallery"></a>
+        <div class="w-full flex flex-col p-4 gap-10">
+            <!-- Container Galeri -->
+            <div class="flex flex-col p-4 gap-4 border-2 rounded-lg">
+                <div class="w-fit px-4 py-2 bg-emerald-600 rounded">
+                    <p class="text-xs sm:text-sm font-normal text-white">Lokasi Event, 31 Desember 2023 - 01 Januari
+                        2024</p>
                 </div>
-                <div class="grid gap-4">
-                    <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg" alt="gallery">
-                    </a>
-                    <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg" alt="gallery">
-                    </a>
-                    <a data-fslightbox href="./assets/images/gallery-1.webp">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-1.webp" alt="gallery">
-                    </a>
+                <div class="flex flex-col gap-y-1">
+                    <p class="text-xs sm:text-base xl:text-xl font-semibold">Tingkatkan Pembiayaan Produktifitas Ekspor
+                        UKM Indonesia, KOPITU Tanda Tangani MoU Dengan BNI XPora</p>
+                    <p class="text-xs sm:text-sm xl:text-base font-normal text-gray-400">Lokasi Event, Tempat
+                        Dilaksanakannya Event</p>
                 </div>
-                <div class="grid gap-4">
-                    <a data-fslightbox href="./assets/images/gallery-2.webp">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-2.webp" alt="gallery">
-                    </a> <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg" alt="gallery">
-                    </a> <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg" alt="gallery">
-                    </a>
+                <p class="text-xs sm:text-base font-normal">Deskripsi tentang event, eventnya ngapain sih,
+                    ohhhh, trus dimana ya eventnya, ngapain aja sih disana. Oh ya sama siapa aja ya, ini kaya gini
+                    soalnya biar panjang aja kek deskripsi trus di copas. Deskripsi tentang event, eventnya ngapain sih,
+                    ohhhh, trus dimana ya eventnya, ngapain aja sih disana. Oh ya sama siapa aja ya, ini kaya gini
+                    soalnya biar panjang aja kek deskripsi trus di copas.</p>
+                <div class="grid grid-cols-3 xl:grid-cols-4 gap-4">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-2.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/gallery-1.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-4.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/gallery-5.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-5.webp" alt="gallery">
                 </div>
-                <div class="grid gap-4">
-                    <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="gallery">
-                    </a>
-                    <a data-fslightbox href="./assets/images/gallery-3.webp">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-3.webp" alt="gallery">
-                    </a>
-                    <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg">
-                        <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg" alt="gallery">
-                    </a>
+            </div>
+
+            <!-- Container Galeri -->
+            <div class="flex flex-col p-4 gap-4 border-2 rounded-lg">
+                <div class="w-fit px-4 py-2 bg-emerald-600 rounded">
+                    <p class="text-xs sm:text-sm font-normal text-white">Lokasi Event, 31 Desember 2023 - 01 Januari
+                        2024</p>
                 </div>
-            </div> -->
+                <div class="flex flex-col gap-y-1">
+                    <p class="text-xs sm:text-base xl:text-xl font-semibold">Tingkatkan Pembiayaan Produktifitas Ekspor
+                        UKM Indonesia, KOPITU Tanda Tangani MoU Dengan BNI XPora</p>
+                    <p class="text-xs sm:text-sm xl:text-base font-normal text-gray-400">Lokasi Event, Tempat
+                        Dilaksanakannya Event</p>
+                </div>
+                <p class="text-xs sm:text-base font-normal">Deskripsi tentang event, eventnya ngapain sih,
+                    ohhhh, trus dimana ya eventnya, ngapain aja sih disana. Oh ya sama siapa aja ya, ini kaya gini
+                    soalnya biar panjang aja kek deskripsi trus di copas. Deskripsi tentang event, eventnya ngapain sih,
+                    ohhhh, trus dimana ya eventnya, ngapain aja sih disana. Oh ya sama siapa aja ya, ini kaya gini
+                    soalnya biar panjang aja kek deskripsi trus di copas.</p>
+                <div class="grid grid-cols-3 xl:grid-cols-4 gap-4">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-4.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-5.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/gallery-5.webp" alt="gallery">
+                </div>
+            </div>
+
+            <!-- Container Galeri -->
+            <div class="flex flex-col p-4 gap-4 border-2 rounded-lg">
+                <div class="w-fit px-4 py-2 bg-emerald-600 rounded">
+                    <p class="text-xs sm:text-sm font-normal text-white">Lokasi Event, 31 Desember 2023 - 01 Januari
+                        2024</p>
+                </div>
+                <div class="flex flex-col gap-y-1">
+                    <p class="text-xs sm:text-base xl:text-xl font-semibold">Tingkatkan Pembiayaan Produktifitas Ekspor
+                        UKM Indonesia, KOPITU Tanda Tangani MoU Dengan BNI XPora</p>
+                    <p class="text-xs sm:text-sm xl:text-base font-normal text-gray-400">Lokasi Event, Tempat
+                        Dilaksanakannya Event</p>
+                </div>
+                <p class="text-xs sm:text-base font-normal">Deskripsi tentang event, eventnya ngapain sih,
+                    ohhhh, trus dimana ya eventnya, ngapain aja sih disana. Oh ya sama siapa aja ya, ini kaya gini
+                    soalnya biar panjang aja kek deskripsi trus di copas. Deskripsi tentang event, eventnya ngapain sih,
+                    ohhhh, trus dimana ya eventnya, ngapain aja sih disana. Oh ya sama siapa aja ya, ini kaya gini
+                    soalnya biar panjang aja kek deskripsi trus di copas.</p>
+                <div class="grid grid-cols-3 xl:grid-cols-4 gap-4">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-2.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/gallery-1.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/image-4.webp" alt="gallery">
+                    <img class="w-72 lg:w-full h-24 sm:h-48 lg:h-64 rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
+                        src="./assets/images/gallery-5.webp" alt="gallery">
+                </div>
+            </div>
+        </div>
+
 
         <!-- Gallery items state 0 item -->
-        <div class="flex justify-center">
+        <!-- <div class="flex justify-center">
             <p class="text-xs sm:text-base xl:text-lg font-normal text-center">Data tidak ditemukan</p>
-        </div>
+        </div> -->
 
     </div>
 
